--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,18 @@
 <html>
   <head>
     <title>Cross-Shop Online Store</title>
+    <%= csrf_meta_tags %>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= csrf_meta_tags %>
   </head>
-
   <body class='<%= controller.controller_name %>'>
   <div id="banner">
+    <%= form_tag store_index_path, class: 'locale' do %>
+      <%= select_tag 'set_locale', options_for_select(LANGUAGES, I18n.locale.to_s), onchange: 'this.form.submit()' %>
+      <%= submit_tag 'submit' %>
+      <%= javascript_tag "$('.locale input').hide()" %>
+    <% end %>
     <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
     <span class="title"><%= @page_title %></span>
   </div>
@@ -22,10 +27,10 @@
         <% end %>
       </div>>
       <ul>
-        <li><a href="http://www....">Home</a></li>
-        <li><a href="http://www..../faq">Questions</a></li>
-        <li><a href="http://www..../news">News</a></li>
-        <li><a href="http://www..../contact">Contact</a></li>
+        <li><a href="http://www...."><%= t('.home') %></a></li>
+        <li><a href="http://www..../faq"><%= t('.questions') %></a></li>
+        <li><a href="http://www..../news"><%= t('.news') %></a></li>
+        <li><a href="http://www..../contact"><%= t('.contact') %></a></li>
       </ul>
       <% if session[:user_id] %>
         <ul>
