--- a/app/views/order_mailer/received.text.erb
+++ b/app/views/order_mailer/received.text.erb
@@ -1,6 +1,6 @@
-Dear <%= @order.name %>
+Шановний <%= @order.name %>!
 
-Thank you for your recent order from The Pragmatic Store.
-You ordered the following items:
+Дякуємо Вам за Ваше замовлення у магазині Cross-Shop.
+Ви заказали наступний товар:
 <%= render @order.line_items -%>
-We'll send you a separate e-mail when your order ships.
+Коли Ваше замовлення буде відправлено, ми надішлемо Вам по електронній пошті окреме повідомлення.
