--- a/app/views/order_mailer/shipped.html.erb
+++ b/app/views/order_mailer/shipped.html.erb
@@ -1,8 +1,8 @@
-<h3>Pragmatic Order Shipped</h3>
+<h3>Cross- Shop відправив Ваше замовлення</h3>
 <p>
-  This is just to let you know that we've shipped your recent order:
+  Це повідомлення повідомляє Вас, що ми відправили Ваше нещодавнє замовлення:
 </p>
 <table>
-  <tr><th colspan="2">Qty</th><th>Description</th></tr>
+  <tr><th colspan="2">К-ть</th><th>Опис</th></tr>
   <%= render @order.line_items -%>
 </table>
