--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,17 +19,17 @@
 
       <div class="field">
         <%= f.label :name, 'Name:' %>
-        <%= f.text_field :name, size: 40 %>
+        <%= f.text_field :name, placeholder: "Your name..", size: 40 %>
       </div>
 
       <div class="field">
         <%= f.label :password, 'Password:' %>
-        <%= f.password_field :password, size: 40 %>
+        <%= f.password_field :password, placeholder: "Your password..", size: 40 %>
       </div>
 
       <div class="field">
         <%= f.label :password_confirmation, 'Confirm:' %>
-        <%= f.password_field :password_confirmation, size: 40 %>
+        <%= f.password_field :password_confirmation, placeholder: "Please confirm password..", size: 40 %>
       </div>
 
       <div class="actions">
