--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h1 {
+  margin: 0;
+  padding-bottom: 0.2em;
+  padding-top: 0.2em;
+  font:  300% sans-serif;
+  font-weight: bolder;
+  background-color: powderblue;
+  text-align: center;
+  box-shadow: 0 0 5px #3b434b;
+}
