--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,33 +4,41 @@
     <title>Cross-Shop Online Store</title>
     <%= csrf_meta_tags %>
 
+    <%= csrf_meta_tags %>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <script type="text/javascript">
+        I18n.defaultLocale = "<%= I18n.default_locale %>";
+        I18n.locale        = "<%= I18n.locale %>";
+    </script>
+
   </head>
   <body class='<%= controller.controller_name %>'>
   <div id="banner">
     <%= form_tag store_index_path, class: 'locale' do %>
+      <div class="select-style">
       <%= select_tag 'set_locale', options_for_select(LANGUAGES, I18n.locale.to_s), onchange: 'this.form.submit()' %>
       <%= submit_tag 'submit' %>
       <%= javascript_tag "$('.locale input').hide()" %>
+      </div>
     <% end %>
-    <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
+    <%= image_tag 'logo_king_cross.png', alt: 'Cross-Shop' %>
     <span class="title"><%= @page_title %></span>
   </div>
   <div id="columns">
     <div id="side">
-      <div id="cart" >
+      <div id="cart">
         <% if @cart %>
           <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
             <%= render @cart %>
           <% end %>
         <% end %>
-      </div>>
+      </div>
       <ul>
-        <li><a href="http://www...."><%= t('.home') %></a></li>
-        <li><a href="http://www..../faq"><%= t('.questions') %></a></li>
-        <li><a href="http://www..../news"><%= t('.news') %></a></li>
-        <li><a href="http://www..../contact"><%= t('.contact') %></a></li>
+        <li><%= link_to t('.catalog'), store_index_url(locale: I18n.locale) %></li>
+        <li><%= link_to t('.login'), admin_url(locale: I18n.locale) %></li>
       </ul>
       <% if session[:user_id] %>
         <ul>
