--- a/app/views/line_items/_line_item.text.erb
+++ b/app/views/line_items/_line_item.text.erb
@@ -1,2 +1,2 @@
-<%= sprintf("%2d x %s", line_item.quantity,
+<%= sprintf("%2d x %s\n", line_item.quantity,
             truncate(line_item.product.title, length: 50)) %>
