--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -13,18 +13,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name, t('.name') %>
-    <%= f.text_field :name, size: 40 %>
+    <%= f.label :name, t('.name')  %>
+    <%= f.text_field :name, placeholder: "Your name.."%>
   </div>
 
   <div class="field">
     <%= f.label :address, t('.address_html') %>
-    <%= f.text_area :address, rows: 3, cols: 40 %>
+    <%= f.text_area :address, placeholder: "Your address.."%>
   </div>
 
   <div class="field">
     <%= f.label :email, t('.email') %>
-    <%= f.email_field :email, size: 40 %>
+    <%= f.email_field :email, placeholder: "Your email.."%>
   </div>
 
   <div class="field">
